Freedom Sanbox Ant Deploy/src/objects/EntityProfilerQuestion__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <description>To store answer of Q submitted by Client/Entity.</description>
        <label>Answer</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>EntityProfilerQuestions</relationshipLabel>
        <relationshipName>EntityProfilerQuestions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProfilerQuestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProfilerQuestion</label>
        <referenceTo>ProfilerQuestions__c</referenceTo>
        <relationshipLabel>EntityProfilerQuestions</relationshipLabel>
        <relationshipName>EntityProfilerQuestion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>Assigns score based on the answer</description>
        <label>Score</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>EntityProfilerQuestion</label>
    <nameField>
        <displayFormat>EPQ-{00000}</displayFormat>
        <label>Entity_Profiler_Question_Mapping_ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EntityProfilerQuestions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>